# DrunkdeerMidiAdapter

./: .gitmodules  CMakeLists.txt  README.md  config.h  main.cpp
include/libdd/: encodings.h  layouts.h  libdd.h  packets.h
